examples/qualification/executable_module_entry/negative_transitive_duplicate_symbol_collision/src/alpha.sm
fn score() -> i32 {
    return 1;
}

fn alpha_score() -> i32 {
    return score();
}
